@@ -30,6 +30,9 @@ Release 0.19.1 - Unreleased
    HBASE-1187  After disabling/enabling a table, the regions seems to 
                be assigned to only 1-2 region servers
    HBASE-1151  Don't ship hbase 0.19.1 till hadoop 0.19.1
+   HBASE-1231  Today, going from a RowResult to a BatchUpdate reqiures some
+               data processing even though they are pretty much the same thing.
+               (Erik Holstad via Stack)
 
 Release 0.19.0
   INCOMPATIBLE CHANGES
